// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`GET /members should return 200 without search filters for user id 1 1`] = `
{
  "members": [
    {
      "avatarStyle": "initials",
      "email": "antti.heikkinen@example.com",
      "first": "Antti",
      "lang": "fi",
      "last": "Heikkinen",
      "memberId": "Antti1",
      "phoneNumber": "0467890123",
      "roles": [
        "INSTRUCTOR",
        "MEMBER",
      ],
      "townCity": "Jyväskylä",
    },
    {
      "avatarStyle": "initials",
      "email": "examinerfe@mik.com",
      "first": "Exe",
      "lang": "fi",
      "last": "McExaminerface",
      "memberId": "Examiner1",
      "phoneNumber": "3584400012345",
      "roles": [
        "EXAMINER",
      ],
      "townCity": "Tampere",
    },
    {
      "avatarStyle": "initials",
      "email": "niko.ikonen@mik.fi",
      "first": "John",
      "lang": "fi",
      "last": "McDoe",
      "memberId": "John1",
      "phoneNumber": "0401234567",
      "roles": [
        "MEMBER",
      ],
      "townCity": "Helsinki",
    },
    {
      "avatarStyle": "initials",
      "email": "jukka.nieminen@example.com",
      "first": "Jukka",
      "lang": "fi",
      "last": "Nieminen",
      "memberId": "Jukka1",
      "phoneNumber": "0423456789",
      "roles": [
        "INSTRUCTOR",
      ],
      "townCity": "Tampere",
    },
    {
      "avatarStyle": "initials",
      "email": "juho.kolehmainen@iki.fi",
      "first": "Liisa",
      "lang": "fi",
      "last": "Korhonen",
      "memberId": "Liisa1",
      "phoneNumber": "0412345678",
      "roles": [
        "COMMITTEE",
      ],
      "townCity": "Espoo",
    },
    {
      "avatarStyle": "initials",
      "email": "chris.whellams@gmail.com",
      "first": "Matti",
      "lang": "fi",
      "last": "Virtanen",
      "memberId": "Matti1",
      "phoneNumber": "0401234567",
      "roles": [
        "INSTRUCTOR",
        "MEMBER",
      ],
      "townCity": "Helsinki",
    },
    {
      "avatarStyle": "initials",
      "email": "pekka.hamalainen@example.com",
      "first": "Pekka",
      "lang": "fi",
      "last": "Hämäläinen",
      "memberId": "Pekka1",
      "phoneNumber": "0445678901",
      "roles": [
        "MEMBER",
      ],
      "townCity": "Turku",
    },
    {
      "avatarStyle": "initials",
      "email": "pirjo.makela@example.com",
      "first": "Pirjo",
      "lang": "fi",
      "last": "Mäkelä",
      "memberId": "Pirjo1",
      "phoneNumber": "0451234002",
      "roles": [
        "MEMBER",
      ],
      "townCity": "Helsinki",
    },
    {
      "avatarStyle": "initials",
      "email": "risto.jarvinen@example.com",
      "first": "Risto",
      "lang": "fi",
      "last": "Järvinen",
      "memberId": "Risto1",
      "phoneNumber": "0451234001",
      "roles": [
        "MEMBER",
      ],
      "townCity": "Helsinki",
    },
    {
      "avatarStyle": "initials",
      "email": "sanna.koskinen@example.com",
      "first": "Sanna",
      "lang": "fi",
      "last": "Koskinen",
      "memberId": "Sanna1",
      "phoneNumber": "0478901234",
      "roles": [
        "COMMITTEE",
      ],
      "townCity": "Lahti",
    },
    {
      "avatarStyle": "initials",
      "email": "teemu.kinnunen@example.com",
      "first": "Teemu",
      "lang": "fi",
      "last": "Kinnunen",
      "memberId": "Teemu1",
      "phoneNumber": "0451234003",
      "roles": [
        "MEMBER",
      ],
      "townCity": "Helsinki",
    },
  ],
}
`;

exports[`GET /members should return 200 without search filters for user id 2 1`] = `
{
  "members": [
    {
      "autoRenewAnnualMembership": false,
      "autoRenewEquipmentFee": false,
      "automaticBillingStatus": true,
      "avatarStyle": "initials",
      "canMakeReservations": true,
      "email": "antti.heikkinen@example.com",
      "first": "Antti",
      "isTrainingProgramPilot": false,
      "lang": "fi",
      "last": "Heikkinen",
      "memberId": "Antti1",
      "memberSince": Any<String>,
      "mustUpdateProfile": false,
      "phoneNumber": "0467890123",
      "roles": [
        "INSTRUCTOR",
        "MEMBER",
      ],
      "townCity": "Jyväskylä",
    },
    {
      "autoRenewAnnualMembership": true,
      "autoRenewEquipmentFee": false,
      "automaticBillingStatus": true,
      "avatarStyle": "initials",
      "canMakeReservations": false,
      "email": "examinerfe@mik.com",
      "first": "Exe",
      "isTrainingProgramPilot": false,
      "lang": "fi",
      "last": "McExaminerface",
      "memberId": "Examiner1",
      "memberSince": Any<String>,
      "mustUpdateProfile": false,
      "phoneNumber": "3584400012345",
      "roles": [
        "EXAMINER",
      ],
      "townCity": "Tampere",
    },
    {
      "autoRenewAnnualMembership": true,
      "autoRenewEquipmentFee": false,
      "automaticBillingStatus": true,
      "avatarStyle": "initials",
      "canMakeReservations": true,
      "email": "niko.ikonen@mik.fi",
      "first": "John",
      "isTrainingProgramPilot": false,
      "lang": "fi",
      "last": "McDoe",
      "memberId": "John1",
      "memberSince": Any<String>,
      "mustUpdateProfile": false,
      "phoneNumber": "0401234567",
      "roles": [
        "ADMIN",
        "MEMBER",
      ],
      "townCity": "Helsinki",
    },
    {
      "autoRenewAnnualMembership": false,
      "autoRenewEquipmentFee": false,
      "automaticBillingStatus": true,
      "avatarStyle": "initials",
      "canMakeReservations": false,
      "email": "jukka.nieminen@example.com",
      "first": "Jukka",
      "isTrainingProgramPilot": false,
      "lang": "fi",
      "last": "Nieminen",
      "memberId": "Jukka1",
      "memberSince": Any<String>,
      "mustUpdateProfile": false,
      "phoneNumber": "0423456789",
      "roles": [
        "INSTRUCTOR",
      ],
      "townCity": "Tampere",
    },
    {
      "autoRenewAnnualMembership": true,
      "autoRenewEquipmentFee": false,
      "automaticBillingStatus": true,
      "avatarStyle": "initials",
      "canMakeReservations": false,
      "email": "juho.kolehmainen@iki.fi",
      "first": "Liisa",
      "isTrainingProgramPilot": false,
      "lang": "fi",
      "last": "Korhonen",
      "memberId": "Liisa1",
      "memberSince": Any<String>,
      "mustUpdateProfile": false,
      "phoneNumber": "0412345678",
      "roles": [
        "ADMIN",
        "COMMITTEE",
        "SMS_PROCESSOR",
      ],
      "townCity": "Espoo",
    },
    {
      "autoRenewAnnualMembership": true,
      "autoRenewEquipmentFee": false,
      "automaticBillingStatus": true,
      "avatarStyle": "initials",
      "canMakeReservations": true,
      "email": "chris.whellams@gmail.com",
      "first": "Matti",
      "isTrainingProgramPilot": true,
      "lang": "fi",
      "last": "Virtanen",
      "memberId": "Matti1",
      "memberSince": Any<String>,
      "mustUpdateProfile": false,
      "phoneNumber": "0401234567",
      "roles": [
        "FLYING_MEMBER",
        "INSTRUCTOR",
        "MEMBER",
        "SMS_MANAGER",
      ],
      "townCity": "Helsinki",
    },
    {
      "autoRenewAnnualMembership": true,
      "autoRenewEquipmentFee": false,
      "automaticBillingStatus": true,
      "avatarStyle": "initials",
      "canMakeReservations": false,
      "email": "pekka.hamalainen@example.com",
      "first": "Pekka",
      "isTrainingProgramPilot": false,
      "lang": "fi",
      "last": "Hämäläinen",
      "memberId": "Pekka1",
      "memberSince": Any<String>,
      "mustUpdateProfile": false,
      "phoneNumber": "0445678901",
      "roles": [
        "ADMIN",
        "MEMBER",
      ],
      "townCity": "Turku",
    },
    {
      "autoRenewAnnualMembership": true,
      "autoRenewEquipmentFee": false,
      "automaticBillingStatus": true,
      "avatarStyle": "initials",
      "canMakeReservations": true,
      "email": "pirjo.makela@example.com",
      "first": "Pirjo",
      "isTrainingProgramPilot": true,
      "lang": "fi",
      "last": "Mäkelä",
      "memberId": "Pirjo1",
      "memberSince": Any<String>,
      "mustUpdateProfile": false,
      "phoneNumber": "0451234002",
      "roles": [
        "MEMBER",
      ],
      "townCity": "Helsinki",
    },
    {
      "autoRenewAnnualMembership": true,
      "autoRenewEquipmentFee": false,
      "automaticBillingStatus": true,
      "avatarStyle": "initials",
      "canMakeReservations": true,
      "email": "risto.jarvinen@example.com",
      "first": "Risto",
      "isTrainingProgramPilot": true,
      "lang": "fi",
      "last": "Järvinen",
      "memberId": "Risto1",
      "memberSince": Any<String>,
      "mustUpdateProfile": false,
      "phoneNumber": "0451234001",
      "roles": [
        "MEMBER",
      ],
      "townCity": "Helsinki",
    },
    {
      "autoRenewAnnualMembership": false,
      "autoRenewEquipmentFee": false,
      "automaticBillingStatus": true,
      "avatarStyle": "initials",
      "canMakeReservations": false,
      "email": "sanna.koskinen@example.com",
      "first": "Sanna",
      "isTrainingProgramPilot": false,
      "lang": "fi",
      "last": "Koskinen",
      "memberId": "Sanna1",
      "memberSince": Any<String>,
      "mustUpdateProfile": false,
      "phoneNumber": "0478901234",
      "roles": [
        "COMMITTEE",
        "SMS_PROCESSOR",
      ],
      "townCity": "Lahti",
    },
    {
      "autoRenewAnnualMembership": true,
      "autoRenewEquipmentFee": false,
      "automaticBillingStatus": true,
      "avatarStyle": "initials",
      "canMakeReservations": true,
      "email": "teemu.kinnunen@example.com",
      "first": "Teemu",
      "isTrainingProgramPilot": true,
      "lang": "fi",
      "last": "Kinnunen",
      "memberId": "Teemu1",
      "memberSince": Any<String>,
      "mustUpdateProfile": false,
      "phoneNumber": "0451234003",
      "roles": [
        "MEMBER",
      ],
      "townCity": "Helsinki",
    },
  ],
}
`;

exports[`GET /members should search by unapproved roles as an admin 1`] = `
[
  {
    "autoRenewAnnualMembership": true,
    "autoRenewEquipmentFee": false,
    "automaticBillingStatus": true,
    "avatarStyle": "initials",
    "canMakeReservations": true,
    "email": "marja1@gmailgg.com",
    "first": "Marja",
    "isTrainingProgramPilot": false,
    "lang": "fi",
    "last": "Salminen",
    "memberId": "Marja1",
    "memberSince": Any<String>,
    "mustUpdateProfile": false,
    "phoneNumber": "0490123456",
    "roles": [],
    "townCity": "Pori",
  },
]
`;

exports[`GET /members/id Get member details as an admin 1`] = `
{
  "autoRenewAnnualMembership": true,
  "autoRenewEquipmentFee": false,
  "avatarStyle": "initials",
  "billingId": null,
  "canMakeReservations": true,
  "country": "FI",
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "dateOfBirth": null,
  "email": "admin@mik.fi",
  "firstName": "MIK",
  "iban": null,
  "ibanAccountName": null,
  "iceContactName": null,
  "iceContactPhoneCountry": "FI",
  "iceContactPhoneNumber": null,
  "imDiscord": null,
  "imFacebookMessenger": null,
  "imSignal": null,
  "imTelegram": null,
  "imViber": null,
  "imWhatsapp": null,
  "isMembershipApproved": false,
  "isMembershipExpired": false,
  "isTrainingProgramPilot": false,
  "lang": "fi",
  "lastName": "Admin",
  "licenceExpiry": null,
  "medicalClass1Expiry": null,
  "medicalClass2Expiry": null,
  "medicalExpiry": null,
  "medicalLaplExpiry": null,
  "memberId": "k1mnimda",
  "memberSince": Any<String>,
  "memberType": "SYSTEM",
  "mustUpdateProfile": false,
  "phoneCountry": "FI",
  "phoneNumber": null,
  "postcode": null,
  "roles": [
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "Administrator with full access",
      "isPublic": false,
      "name": {
        "en": "Administrator",
        "fi": "Ylläpitäjä",
        "sv": "Administratör",
      },
      "permissions": [
        "member.admin",
        "flightlog.admin",
        "booking.admin",
        "aircraft.admin",
        "access_codes.admin",
        "invoicing.admin",
        "document.admin",
        "outbox.admin",
        "store.admin",
        "fuelPrices.admin",
        "exam.admin",
        "dto.admin",
        "events.admin",
        "expense.admin",
        "inventory.admin",
        "meeting.admin",
        "ame.admin",
        "inventory_reservation.admin",
        "liquid.admin",
      ],
      "roleId": "ADMIN",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
  ],
  "streetAddress": null,
  "townCity": null,
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
}
`;

exports[`GET /members/me should return 200 with valid token for user 1`] = `
{
  "autoRenewAnnualMembership": true,
  "autoRenewEquipmentFee": false,
  "avatarStyle": "initials",
  "billingId": "123",
  "canMakeReservations": true,
  "country": "FI",
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "dateOfBirth": "1980-01-15",
  "defaultInstructorMemberId": "Jukka1",
  "email": "chris.whellams@gmail.com",
  "emailVerifiedAt": Any<String>,
  "firstName": "Matti",
  "iban": null,
  "ibanAccountName": null,
  "iceContactName": "Liisa Virtanen",
  "iceContactPhoneCountry": "FI",
  "iceContactPhoneNumber": "0407654321",
  "imDiscord": null,
  "imFacebookMessenger": null,
  "imSignal": null,
  "imTelegram": null,
  "imViber": null,
  "imWhatsapp": null,
  "isMembershipApproved": true,
  "isMembershipExpired": false,
  "isTrainingProgramPilot": true,
  "lang": "fi",
  "lastName": "Virtanen",
  "licenceExpiry": "2026-03-20",
  "licenceId": "FI.FCL.123456",
  "medicalClass1Expiry": null,
  "medicalClass2Expiry": null,
  "medicalExpiry": "2026-06-01",
  "medicalLaplExpiry": null,
  "memberId": "Matti1",
  "memberSince": Any<String>,
  "memberType": "FLYING",
  "membershipApprovedAt": Any<String>,
  "membershipApprovedBy": "Matti1",
  "mustUpdateProfile": false,
  "phoneCountry": "FI",
  "phoneNumber": "0401234567",
  "postcode": "00100",
  "roles": [
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "MIK member with additional flying rights",
      "isPublic": false,
      "name": {
        "en": "Flying Member",
        "fi": "Lento-oikeus",
        "sv": "Flygmedlem",
      },
      "permissions": [
        "flightlog.user",
        "booking.user",
        "aircraft.user",
        "access_codes.user",
        "document.user",
        "store.user",
        "fuelPrices.user",
        "dto.user",
        "inventory.user",
        "meeting.user",
        "ame.user",
        "inventory_reservation.user",
        "liquid.user",
      ],
      "roleId": "FLYING_MEMBER",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "Instructor with permissions to manage training",
      "isPublic": true,
      "name": {
        "en": "Instructor",
        "fi": "Lennonopettaja",
        "sv": "Instruktör",
      },
      "permissions": [
        "dto.instructor",
      ],
      "roleId": "INSTRUCTOR",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "MIK member with basic access",
      "isPublic": true,
      "name": {
        "en": "Member",
        "fi": "Jäsen",
        "sv": "Medlem",
      },
      "permissions": [
        "member",
        "document.user",
        "store.user",
        "exam.user",
        "dto.user",
        "expense.user",
        "inventory.user",
        "meeting.user",
        "ame.user",
        "inventory_reservation.user",
      ],
      "roleId": "MEMBER",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "Safety Manager takes care of processing anonymized occurrences",
      "isPublic": false,
      "name": {
        "en": "Safety Manager",
        "fi": "Turvallisuusvastaava",
        "sv": "Säkerhetsansvarig",
      },
      "permissions": [
        "sms.manager",
      ],
      "roleId": "SMS_MANAGER",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
  ],
  "streetAddress": "Keskuskatu 1",
  "townCity": "Helsinki",
  "updatedAt": Any<String>,
  "updatedBy": Any<String>,
}
`;

exports[`GET /members/me should return 200 with valid token for user 2`] = `
{
  "autoRenewAnnualMembership": true,
  "autoRenewEquipmentFee": false,
  "avatarStyle": "initials",
  "billingId": null,
  "canMakeReservations": true,
  "country": "FI",
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "dateOfBirth": null,
  "email": "admin@mik.fi",
  "firstName": "MIK",
  "iban": null,
  "ibanAccountName": null,
  "iceContactName": null,
  "iceContactPhoneCountry": "FI",
  "iceContactPhoneNumber": null,
  "imDiscord": null,
  "imFacebookMessenger": null,
  "imSignal": null,
  "imTelegram": null,
  "imViber": null,
  "imWhatsapp": null,
  "isMembershipApproved": false,
  "isMembershipExpired": false,
  "isTrainingProgramPilot": false,
  "lang": "fi",
  "lastName": "Admin",
  "licenceExpiry": null,
  "medicalClass1Expiry": null,
  "medicalClass2Expiry": null,
  "medicalExpiry": null,
  "medicalLaplExpiry": null,
  "memberId": "k1mnimda",
  "memberSince": Any<String>,
  "memberType": "SYSTEM",
  "mustUpdateProfile": false,
  "phoneCountry": "FI",
  "phoneNumber": null,
  "postcode": null,
  "roles": [
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "Administrator with full access",
      "isPublic": false,
      "name": {
        "en": "Administrator",
        "fi": "Ylläpitäjä",
        "sv": "Administratör",
      },
      "permissions": [
        "member.admin",
        "flightlog.admin",
        "booking.admin",
        "aircraft.admin",
        "access_codes.admin",
        "invoicing.admin",
        "document.admin",
        "outbox.admin",
        "store.admin",
        "fuelPrices.admin",
        "exam.admin",
        "dto.admin",
        "events.admin",
        "expense.admin",
        "inventory.admin",
        "meeting.admin",
        "ame.admin",
        "inventory_reservation.admin",
        "liquid.admin",
      ],
      "roleId": "ADMIN",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
  ],
  "streetAddress": null,
  "townCity": null,
  "updatedAt": Any<String>,
  "updatedBy": Any<String>,
}
`;

exports[`GET /members/me should return 200 with valid token for user 3`] = `
{
  "autoRenewAnnualMembership": true,
  "autoRenewEquipmentFee": false,
  "avatarStyle": "initials",
  "billingId": "124",
  "canMakeReservations": false,
  "country": "FI",
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "dateOfBirth": "1985-02-20",
  "email": "juho.kolehmainen@iki.fi",
  "emailVerifiedAt": Any<String>,
  "firstName": "Liisa",
  "iban": null,
  "ibanAccountName": null,
  "iceContactName": "Matti Korhonen",
  "iceContactPhoneCountry": "FI",
  "iceContactPhoneNumber": "0418765432",
  "imDiscord": null,
  "imFacebookMessenger": null,
  "imSignal": null,
  "imTelegram": null,
  "imViber": null,
  "imWhatsapp": null,
  "isMembershipApproved": true,
  "isMembershipExpired": false,
  "isTrainingProgramPilot": false,
  "lang": "fi",
  "lastName": "Korhonen",
  "licenceExpiry": "2026-03-20",
  "licenceId": "FI.FCL.123456",
  "medicalClass1Expiry": null,
  "medicalClass2Expiry": null,
  "medicalExpiry": "2026-06-01",
  "medicalLaplExpiry": null,
  "memberId": "Liisa1",
  "memberSince": Any<String>,
  "memberType": "JUNIOR",
  "membershipApprovedAt": Any<String>,
  "membershipApprovedBy": "Matti1",
  "mustUpdateProfile": false,
  "phoneCountry": "FI",
  "phoneNumber": "0412345678",
  "postcode": "02100",
  "roles": [
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "Administrator with full access",
      "isPublic": false,
      "name": {
        "en": "Administrator",
        "fi": "Ylläpitäjä",
        "sv": "Administratör",
      },
      "permissions": [
        "member.admin",
        "flightlog.admin",
        "booking.admin",
        "aircraft.admin",
        "access_codes.admin",
        "invoicing.admin",
        "document.admin",
        "outbox.admin",
        "store.admin",
        "fuelPrices.admin",
        "exam.admin",
        "dto.admin",
        "events.admin",
        "expense.admin",
        "inventory.admin",
        "meeting.admin",
        "ame.admin",
        "inventory_reservation.admin",
        "liquid.admin",
      ],
      "roleId": "ADMIN",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "MIK board member with decision-making authority in the club",
      "isPublic": true,
      "name": {
        "en": "Committee Member",
        "fi": "Hallituksen jäsen",
        "sv": "Styrelsemedlem",
      },
      "permissions": [
        "access_codes.admin",
        "ame.admin",
      ],
      "roleId": "COMMITTEE",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "SMS independent receives new occurrences and anonymizes them",
      "isPublic": false,
      "name": {
        "en": "SMS independent reviewer",
        "fi": "SMS riippumaton tarkastaja",
        "sv": "SMS oberoende granskare",
      },
      "permissions": [
        "sms.processor",
      ],
      "roleId": "SMS_PROCESSOR",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
  ],
  "streetAddress": "Mannerheimintie 10",
  "townCity": "Espoo",
  "updatedAt": Any<String>,
  "updatedBy": Any<String>,
}
`;

exports[`Membership approval tests Get unapproved members should return list of members awaiting approval 1`] = `
[
  {
    "autoRenewAnnualMembership": true,
    "autoRenewEquipmentFee": false,
    "automaticBillingStatus": true,
    "avatarStyle": "initials",
    "canMakeReservations": true,
    "email": "anna.makinen@example.com",
    "first": "Anna",
    "isTrainingProgramPilot": false,
    "lang": "fi",
    "last": "Mäkinen",
    "memberId": "Anna1",
    "memberSince": Any<String>,
    "mustUpdateProfile": false,
    "phoneNumber": "0434567890",
    "roles": [
      "COMMITTEE",
    ],
    "townCity": "Vantaa",
  },
  {
    "autoRenewAnnualMembership": true,
    "autoRenewEquipmentFee": false,
    "automaticBillingStatus": true,
    "avatarStyle": "initials",
    "canMakeReservations": false,
    "email": "juha.seppala@example.com",
    "first": "Juha",
    "isTrainingProgramPilot": false,
    "lang": "fi",
    "last": "Seppälä",
    "memberId": "Juha1",
    "memberSince": Any<String>,
    "mustUpdateProfile": false,
    "phoneNumber": "0489012345",
    "roles": [
      "MEMBER",
    ],
    "townCity": "Kuopio",
  },
  {
    "autoRenewAnnualMembership": true,
    "autoRenewEquipmentFee": false,
    "automaticBillingStatus": true,
    "avatarStyle": "initials",
    "canMakeReservations": false,
    "email": "kaisa.laine@example.com",
    "first": "Kaisa",
    "isTrainingProgramPilot": false,
    "lang": "fi",
    "last": "Laine",
    "memberId": "Kaisa1",
    "memberSince": Any<String>,
    "mustUpdateProfile": false,
    "phoneNumber": "0456789012",
    "roles": [
      "ADMIN",
    ],
    "townCity": "Oulu",
  },
  {
    "autoRenewAnnualMembership": true,
    "autoRenewEquipmentFee": false,
    "automaticBillingStatus": true,
    "avatarStyle": "initials",
    "canMakeReservations": true,
    "email": "marja1@gmailgg.com",
    "first": "Marja",
    "isTrainingProgramPilot": false,
    "lang": "fi",
    "last": "Salminen",
    "memberId": "Marja1",
    "memberSince": Any<String>,
    "mustUpdateProfile": false,
    "phoneNumber": "0490123456",
    "roles": [],
    "townCity": "Pori",
  },
]
`;
